# Proyecto_SO

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
include/: GestorArchivos.h  GestorDatos.h  GestorMemoria.h  GestorOperaciones.h  MainWindow.h  MarcoDelegate.h  Proceso.h  Programa.h  TablaBase.h  TablaBloqueados.h  TablaEjecucion.h  TablaListos.h  TablaPaginas.h  TablaResultados.h  TablaTerminados.h  VentanaCantidad.h  VentanaDatos.h  gestorDatos.h
src/: GestorArchivos.cpp  GestorDatos.cpp  GestorMemoria.cpp  GestorOperaciones.cpp  MainWindow.cpp  MainWindow.ui  TablaBase.cpp  TablaBloqueados.cpp  TablaEjecucion.cpp  TablaListos.cpp  TablaPaginas.cpp  TablaResultados.cpp  TablaResultados.ui  TablaTerminados.cpp  VentanaCantidad.cpp  VentanaDatos.cpp  VentanaDatos.ui  gestorDatos.cpp
